# pdfedit

./: .env.example  .gitignore  ADOBE_FORMAT_SPEC.md  ARCHITECTURE_V2.md  IMAGE_INPUT_SPEC.md  README.md  SPECIFICATION.md  STRUCTURED_EDITOR_SPEC.md  bittrim.py  changeorder.py  combinepdf.py  overwritepdf.py  pyproject.toml  removePDF.py  requirements.txt  vercel.json
.claude/: settings.local.json
api/: index.py
app/: main.py
app/middleware/: rate_limit.py
app/models/: requests.py  responses.py
app/routers/: ai.py  area_replace.py  branding.py  health.py  merge.py  optimize.py  pages.py  resize.py  upload.py  watermark.py
app/services/: branding_service.py  gemini_service.py  pdf_service.py  session_service.py
app/templates/: ai_workshop.html  area_replace.html  base.html  editor.html  error.html  index.html  merge.html
static/css/: style.css
static/js/: editor.js  image-input.js  pdf-engine.js  storage.js  (+2 more)
tests/: conftest.py  debug_xml_editor.py  monkey_test.py  test_ai_api.py  test_ai_mime_types.py  test_api.py  test_branding_service.py  test_e2e_adobe_formats.py  test_e2e_blank_page_export.py  test_e2e_branding_export.py  test_e2e_compound_export.py  test_e2e_delete_export.py  test_e2e_extract_export.py  test_e2e_image_input.py  test_e2e_merge_export.py  test_e2e_reorder_export.py  test_e2e_rotate_export.py  test_e2e_save_export.py  test_e2e_undo_export.py  test_e2e_xml_editor.py  test_gemini_service.py  test_health.py  test_pages.py  test_pdf_service.py  test_phase2_api.py  test_phase3_api.py  test_phase4.py  test_session_service.py  test_static.py
(+14 files in other folders)
